buildscript {

	ext {

		querydslVersion = '6.10.1'

	}

}

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.9'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.onspring'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.modelmapper:modelmapper:3.1.0'

	//Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	implementation "io.github.openfeign.querydsl:querydsl-jpa:${querydslVersion}"
	annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:${querydslVersion}:jpa"
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	testAnnotationProcessor "io.github.openfeign.querydsl:querydsl-apt:${querydslVersion}:jpa"
	testAnnotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	//file thumbnail
	implementation 'net.coobird:thumbnailator:0.4.19'

	testImplementation "org.mockito:mockito-core:5.+"

	//ThymeleafLayoutDialect 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'


	implementation 'org.springframework.boot:spring-boot-starter-security'

	implementation 'com.google.code.gson:gson:2.10.1'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	implementation 'io.github.cdimascio:dotenv-java:3.0.0'

	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	implementation 'software.amazon.awssdk:s3:2.17.121'  // AWS SDK v2 버전, 최신 버전 사용
	implementation 'software.amazon.awssdk:auth:2.17.121'  // 인증 관련 의존성 추가

	//Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'


}


task copyEnvFile(type: Copy) {
	from '.env'
	into "$buildDir/resources/main"
}

processResources.dependsOn(copyEnvFile)

processResources.dependsOn(copyEnvFile)
processResources.dependsOn(copyEnvFile)

tasks.named('test') {
	useJUnitPlatform()
}